--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.3.2",
+  "version": "6.4.0",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -413,6 +413,45 @@
           }
         ],
         "id": "meter_price_h0_changed"
+      },
+      {
+        "title": {
+          "en": "New price hour",
+          "nl": "Nieuw prijs-uur"
+        },
+        "titleFormatted": {
+          "en": "New price hour starts",
+          "nl": "Nieuw prijs-uur begint"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap|dapg"
+          }
+        ],
+        "tokens": [
+          {
+            "name": "H0",
+            "title": {
+              "en": "Hour",
+              "nl": "Uur"
+            },
+            "type": "number",
+            "example": 14
+          },
+          {
+            "name": "price",
+            "title": {
+              "en": "Price",
+              "nl": "Prijs"
+            },
+            "type": "number",
+            "example": 0.2747
+          }
+        ],
+        "id": "new_hour"
       },
       {
         "title": {
