--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.4.0",
+  "version": "6.4.1",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -417,11 +417,13 @@
       {
         "title": {
           "en": "New price hour",
-          "nl": "Nieuw prijs-uur"
+          "nl": "Nieuw prijs-uur",
+          "de": "Neuer Stundenpreis"
         },
         "titleFormatted": {
           "en": "New price hour starts",
-          "nl": "Nieuw prijs-uur begint"
+          "nl": "Nieuw prijs-uur begint",
+          "de": "Neuer Stundenpreis beginnt"
         },
         "highlight": true,
         "args": [
@@ -436,7 +438,8 @@
             "name": "H0",
             "title": {
               "en": "Hour",
-              "nl": "Uur"
+              "nl": "Uur",
+              "de": "Stunde"
             },
             "type": "number",
             "example": 14
@@ -445,7 +448,8 @@
             "name": "price",
             "title": {
               "en": "Price",
-              "nl": "Prijs"
+              "nl": "Prijs",
+              "de": "Preis"
             },
             "type": "number",
             "example": 0.2747
