--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.gruijter.powerhour",
-  "version": "6.4.1",
+  "version": "6.5.0",
   "compatibility": ">=8.0.0",
   "brandColor": "#df5020",
   "sdk": 3,
@@ -2273,6 +2273,82 @@
       },
       {
         "title": {
+          "en": "The avg. price !{{is|isn't}} highest before a certain time",
+          "nl": "De gem. prijs !{{is|is niet}} het hoogst voor een bepaalde tijd",
+          "de": "Der durschn. Preis !{{ist|ist nicht}} vor einer bestimmten Uhrzeit am höchsten"
+        },
+        "titleFormatted": {
+          "en": "The avg. price coming [[hours]]H !{{is|isn't}} highest in the [[period]] hours before [[time]] o'clock",
+          "nl": "De gem. prijs komende [[hours]]U !{{is|is niet}} het hoogst in de [[period]] uren voor [[time]] uur",
+          "de": "Der durschn. Preis der nächsten [[hours]]Std. !{{ist|ist nicht}} der höchsten in den [[period]] Stunden vor [[time]] Uhr"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=dap|dapg"
+          },
+          {
+            "type": "number",
+            "name": "hours",
+            "title": {
+              "en": "next hours",
+              "de": "der nächsten Std.",
+              "sv": "nästa H",
+              "it": "prossime h",
+              "no": "neste T",
+              "dk": "næste T",
+              "nl": "komende uren"
+            },
+            "placeholder": {
+              "en": "2-8"
+            },
+            "min": 2,
+            "max": 8,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "period",
+            "title": {
+              "en": "period",
+              "de": "Zeitraum",
+              "sv": "period",
+              "it": "periodo",
+              "no": "periode",
+              "nl": "periode"
+            },
+            "placeholder": {
+              "en": "2 - 23"
+            },
+            "min": 2,
+            "max": 23,
+            "step": 1
+          },
+          {
+            "type": "number",
+            "name": "time",
+            "title": {
+              "en": "time",
+              "de": "Zeit",
+              "sv": "tid",
+              "it": "tempo",
+              "no": "tid",
+              "nl": "tijd"
+            },
+            "placeholder": {
+              "en": "01 - 24"
+            },
+            "min": 1,
+            "max": 24,
+            "step": 1
+          }
+        ],
+        "id": "price_highest_avg_before"
+      },
+      {
+        "title": {
           "en": "The price !{{is|isn't}} highest before a certain time",
           "no": "Prisen!{{er|er ikke}} høyest før en bestemt tid",
           "de": "Preis !{{ist|ist nicht}} der höchsten für eine bestimmte Zeit",
@@ -2942,10 +3018,10 @@
               "nl": "aantal"
             },
             "placeholder": {
-              "en": "1 - 5"
+              "en": "1 - 20"
             },
             "min": 1,
-            "max": 5,
+            "max": 20,
             "step": 1
           }
         ],
@@ -3520,6 +3596,37 @@
           }
         ],
         "id": "set_tariff_gas"
+      },
+      {
+        "title": {
+          "en": "Set a new tariff update group",
+          "nl": "Stel een nieuwe tarief update groep in"
+        },
+        "titleFormatted": {
+          "en": "Set tariff update group to [[group]]",
+          "nl": "Stel tarief update groep in op [[group]]"
+        },
+        "highlight": true,
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=power|gas|water"
+          },
+          {
+            "name": "group",
+            "type": "number",
+            "placeholder": {
+              "en": "Update group",
+              "nl": "Update groep"
+            },
+            "required": true,
+            "min": 1,
+            "max": 10,
+            "step": 1
+          }
+        ],
+        "id": "set_tariff_group"
       },
       {
         "title": {
